src/tests/snapshots/ppl__tests__rational.run.snap
---
source: src/tests/mod.rs
expression: run_log
---
0.0
1.0
-2.0
3.0
4.0
5.0
6.0
true
true
true
true
true
true
true
true
