src/tests/snapshots/ppl__tests__reference_mut.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@x = global %Integer zeroinitializer
@y = global ptr null
@"$tmp0@79" = global %Integer zeroinitializer

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define void @main.execute() !dbg !9 {
  call void @initialize.1(), !dbg !10
  call void @initialize.2(), !dbg !11
  call void @initialize.3(), !dbg !12
  %1 = load ptr, ptr @y, align 8, !dbg !13
  %2 = call %Integer @integer_from_i64(i64 2), !dbg !14
  store %Integer %2, ptr %1, align 8, !dbg !14
  call void @initialize.4(), !dbg !15
  call void @initialize.5(), !dbg !16
  call void @initialize.6(), !dbg !17
  %3 = load %Integer, ptr @x, align 8, !dbg !18
  call void @destroy_integer(%Integer %3), !dbg !18
  %4 = load %Integer, ptr @"$tmp0@79", align 8, !dbg !16
  call void @destroy_integer(%Integer %4), !dbg !16
  br label %return, !dbg !16

return:                                           ; preds = %0
  ret void
}

define private void @initialize.1() !dbg !19 {
  %1 = call %Integer @integer_from_i64(i64 1), !dbg !20
  store %Integer %1, ptr @x, align 8, !dbg !20
  br label %return, !dbg !20

return:                                           ; preds = %0
  ret void
}

define private void @initialize.2() !dbg !21 {
  %1 = call ptr @"reference to mutable <:ReferenceMut<Integer>>"(ptr @x), !dbg !22
  store ptr %1, ptr @y, align 8, !dbg !22
  br label %return, !dbg !22

return:                                           ; preds = %0
  ret void
}

define private ptr @"reference to mutable <:ReferenceMut<Integer>>"(ptr %0) !dbg !23 {
  %return_value = alloca ptr, align 8
  %ref = alloca ptr, align 8
  store ptr %0, ptr %ref, align 8
  %2 = load ptr, ptr %ref, align 8, !dbg !24
  store ptr %2, ptr %return_value, align 8, !dbg !24
  br label %return, !dbg !24

return:                                           ; preds = %1
  %3 = load ptr, ptr %return_value, align 8
  ret ptr %3
}

define private void @initialize.3() !dbg !25 {
  %1 = load ptr, ptr @y, align 8, !dbg !26
  %2 = load %Integer, ptr %1, align 8, !dbg !26
  call void @"println <:Integer>"(%Integer %2), !dbg !26
  br label %return, !dbg !26

return:                                           ; preds = %0
  ret void
}

define private void @"println <:Integer>"(%Integer %0) !dbg !27 {
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !28
  %3 = call %String @integer_as_string(%Integer %2), !dbg !28
  %"$tmp0@4544" = alloca %String, align 8, !dbg !28
  store %String %3, ptr %"$tmp0@4544", align 8, !dbg !28
  %4 = load %String, ptr %"$tmp0@4544", align 8, !dbg !28
  call void @"println <:String>"(%String %4), !dbg !28
  %5 = load %String, ptr %"$tmp0@4544", align 8, !dbg !28
  call void @destroy_string(%String %5), !dbg !28
  br label %return, !dbg !28

return:                                           ; preds = %1
  ret void
}

declare %String @integer_as_string(%Integer)

declare void @"println <:String>"(%String)

declare void @destroy_string(%String)

define private void @initialize.4() !dbg !29 {
  %1 = load ptr, ptr @y, align 8, !dbg !30
  %2 = load %Integer, ptr %1, align 8, !dbg !30
  call void @"println <:Integer>"(%Integer %2), !dbg !30
  br label %return, !dbg !30

return:                                           ; preds = %0
  ret void
}

define private void @initialize.5() !dbg !31 {
  %1 = load %Integer, ptr @x, align 8, !dbg !32
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !32
  store %Integer %2, ptr @"$tmp0@79", align 8, !dbg !32
  br label %return, !dbg !32

return:                                           ; preds = %0
  ret void
}

declare %Integer @clone_integer(%Integer)

define private void @initialize.6() !dbg !33 {
  %1 = load %Integer, ptr @"$tmp0@79", align 8, !dbg !34
  call void @"println <:Integer>"(%Integer %1), !dbg !34
  br label %return, !dbg !34

return:                                           ; preds = %0
  ret void
}

declare void @destroy_integer(%Integer)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 6, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 0, column: 12, scope: !9)
!11 = !DILocation(line: 1, column: 8, scope: !9)
!12 = !DILocation(line: 2, scope: !9)
!13 = !DILocation(line: 3, scope: !9)
!14 = !DILocation(line: 3, column: 4, scope: !9)
!15 = !DILocation(line: 4, scope: !9)
!16 = !DILocation(line: 5, column: 8, scope: !9)
!17 = !DILocation(line: 5, scope: !9)
!18 = !DILocation(line: 0, scope: !9)
!19 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !9, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!20 = !DILocation(line: 0, column: 12, scope: !19)
!21 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !9, file: !2, line: 1, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!22 = !DILocation(line: 1, column: 29, scope: !21)
!23 = distinct !DISubprogram(name: "reference to mutable <:ReferenceMut<Integer>>", linkageName: "reference to mutable <:ReferenceMut<Integer>>", scope: !21, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!24 = !DILocation(line: 6, scope: !23)
!25 = distinct !DISubprogram(name: "initialize.3", linkageName: "initialize.3", scope: !9, file: !2, line: 2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!26 = !DILocation(line: 2, column: 8, scope: !25)
!27 = distinct !DISubprogram(name: "println <:Integer>", linkageName: "println <:Integer>", scope: !25, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!28 = !DILocation(line: 6, scope: !27)
!29 = distinct !DISubprogram(name: "initialize.4", linkageName: "initialize.4", scope: !9, file: !2, line: 4, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!30 = !DILocation(line: 4, column: 8, scope: !29)
!31 = distinct !DISubprogram(name: "initialize.5", linkageName: "initialize.5", scope: !9, file: !2, line: 5, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!32 = !DILocation(line: 5, column: 8, scope: !31)
!33 = distinct !DISubprogram(name: "initialize.6", linkageName: "initialize.6", scope: !9, file: !2, line: 5, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!34 = !DILocation(line: 5, column: 8, scope: !33)
