src/tests/snapshots/ppl__tests__reference_to_literal.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
fn foo <x: Reference<Integer>> -> None:
	let $tmp@24: None = `println <:Integer>`(`clone <:Reference<Integer>>`((*x:Integer)))
	return ($tmp@24:None)

let $tmp@39: Integer = 42
`foo <:Reference<Integer>>`((&$tmp@39:Reference<Integer>))
`destroy <:ReferenceMut<Integer>>`(($tmp@39:Integer))

==MONOMORPHIZED==


@mangle_as("integer_as_string")
fn String from <$arg0: Integer> -> String

fn println <x: Integer> -> None:
	let $tmp@185: String = `String from <:Integer>`((copy x:Integer))
	let $tmp@176: None = `println <:Reference<String>>`((&$tmp@185:Reference<String>))
	return ($tmp@176:None)
