src/tests/snapshots/ppl__tests__reference_to_none.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
fn foo <$arg0: Reference<None>> -> None:
	let $tmp@27: String = "foo"
	let $tmp@19: None = `println <:Reference<String>>`((&$tmp@27:Reference<String>))
	`destroy <:ReferenceMut<String>>`(($tmp@27:String))
	return ($tmp@19:None)

let x: None = none
`foo <:Reference<None>>`((&x:Reference<None>))
